Revert dark mode background colors to correct values

--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ body.dark-mode {
   --secondary-contrast-cta-color: rgb(246, 92, 85);
   --primary-text-color: rgb(255, 255, 255);
   --text-contrast-color: rgb(210, 210, 210);
-  --main-background-color: rgb(0, 25, 60);
-  --body-background-color: rgb(0, 25, 80);
+  --main-background-color: rgb(0, 25, 80);
+  --body-background-color: rgb(0, 25, 60);
   --header-background-color: rgb(0, 25, 60);
   --subheader-background-color: rgb(15, 26, 61);
   --dropdown-background-color: rgb(0, 28, 100);
